Add ticket sources
